--- a/index.html
+++ b/index.html
@@ -8,6 +8,27 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
+        <div class="container">
+            <aside>
+                <div class="menu-sx">
 
+                </div>
+            </aside>
+            <section class="core">
+                <header>
+                    <div class="reg-bar">
+                        <a href="#">EFFETTUA L'UPGRADE</a>
+                    </div>
+                </header>
+                <main>
+
+                </main>
+            </section>
+        </div>
+        <div class="container foot">
+            <footer>
+                <div class="player"></div>
+            </footer>
+        </div>
     </body>
 </html>
