aside da revisionare

--- a/index.html
+++ b/index.html
@@ -11,6 +11,53 @@
         <div class="container">
             <aside>
                 <div class="menu-sx">
+                    <div class="logo">
+                        <img class="logo-img" src="https://storage.googleapis.com/pr-newsroom-wp/1/2018/11/Spotify_Logo_RGB_White.png" alt="Spotify">
+                    </div>
+                    <ul class="links">
+                        <li class="link">
+                            <i class="fas fa-home"></i>
+                            <p>Home</p>
+                        </li>
+                        <li class="link">
+                            <i class="fas fa-search"></i>
+                            <p>Cerca</p>
+                        </li>
+                        <li class="link">
+                            <i class="fas fa-book-open"></i>
+                            <p>La tua libreria</p>
+                        </li>
+                    </ul>
+                    <div class="playlist-zone">
+                        <h2>PLAYLIST</h2>
+                        <ul class="playlist">
+                            <li>
+                                <i class="fas fa-plus-square"></i>
+                                <p>Crea Playlist</p>
+                            </li>
+                            <li>
+                                <p>Nome Playlist </p>
+                            </li>
+                            <li>
+                                <p>Nome Playlist </p>
+                            </li>
+                            <li>
+                                <p>Nome Playlist </p>
+                            </li>
+                            <li>
+                                <p>Nome Playlist </p>
+                            </li>
+                            <li>
+                                <p>Nome Playlist </p>
+                            </li>
+                            <li>
+                                <p>Nome Playlist </p>
+                            </li>
+                            <li>
+                                <p>Nome Playlist </p>
+                            </li>
+                        </ul>
+                    </div>
 
                 </div>
             </aside>
