aside + header + main done

--- a/index.html
+++ b/index.html
@@ -11,54 +11,66 @@
         <div class="container">
             <aside>
                 <div class="menu-sx">
-                    <div class="logo">
-                        <img class="logo-img" src="https://storage.googleapis.com/pr-newsroom-wp/1/2018/11/Spotify_Logo_RGB_White.png" alt="Spotify">
-                    </div>
-                    <ul class="links">
-                        <li class="link">
-                            <i class="fas fa-home"></i>
-                            <p>Home</p>
-                        </li>
-                        <li class="link">
-                            <i class="fas fa-search"></i>
-                            <p>Cerca</p>
-                        </li>
-                        <li class="link">
-                            <i class="fas fa-book-open"></i>
-                            <p>La tua libreria</p>
-                        </li>
-                    </ul>
-                    <div class="playlist-zone">
-                        <h2>PLAYLIST</h2>
-                        <ul class="playlist">
-                            <li>
-                                <i class="fas fa-plus-square"></i>
-                                <p>Crea Playlist</p>
+                    <div class="upper-aside">
+                        <div class="logo">
+                            <img class="logo-img" src="https://storage.googleapis.com/pr-newsroom-wp/1/2018/11/Spotify_Logo_RGB_White.png" alt="Spotify">
+                        </div>
+                        <ul class="links">
+                            <li class="link">
+                                <i class="fas fa-home"></i>
+                                <p>Home</p>
                             </li>
-                            <li>
-                                <p>Nome Playlist </p>
+                            <li class="link">
+                                <i class="fas fa-search"></i>
+                                <p>Cerca</p>
                             </li>
-                            <li>
-                                <p>Nome Playlist </p>
-                            </li>
-                            <li>
-                                <p>Nome Playlist </p>
-                            </li>
-                            <li>
-                                <p>Nome Playlist </p>
-                            </li>
-                            <li>
-                                <p>Nome Playlist </p>
-                            </li>
-                            <li>
-                                <p>Nome Playlist </p>
-                            </li>
-                            <li>
-                                <p>Nome Playlist </p>
+                            <li class="link">
+                                <i class="fas fa-book-open"></i>
+                                <p>La tua libreria</p>
                             </li>
                         </ul>
+                        <div class="playlist-zone">
+                            <h2>PLAYLIST</h2>
+                            <ul class="playlist">
+                                <li>
+                                    <i class="fas fa-plus-square"></i>
+                                    <p>Crea Playlist</p>
+                                </li>
+                                <li>
+                                    <p>Nome Playlist </p>
+                                </li>
+                                <li>
+                                    <p>Nome Playlist </p>
+                                </li>
+                                <li>
+                                    <p>Nome Playlist </p>
+                                </li>
+                                <li>
+                                    <p>Nome Playlist </p>
+                                </li>
+                                <li>
+                                    <p>Nome Playlist </p>
+                                </li>
+                                <li>
+                                    <p>Nome Playlist </p>
+                                </li>
+                                <li>
+                                    <p>Nome Playlist </p>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-
+                    <div class="bottom-aside">
+                        <div class="btm-asd-up">
+                            <i class="fas fa-arrow-circle-down"></i>
+                            <small>Installa app</small>
+                        </div>
+                        <hr>
+                        <div class="btm-asd-down">
+                            <i class="fas fa-user-circle"></i>
+                            <small>Peter Seven</small>
+                        </div>
+                    </div>
                 </div>
             </aside>
             <section class="core">
@@ -68,14 +80,84 @@
                     </div>
                 </header>
                 <main>
-
+                    <nav>
+                        <ul>
+                            <li><a href="#">IN EVIDENZA</a></li>
+                            <li><a href="#">PODCAST</a></li>
+                            <li><a href="#">CLASSIFICHE</a></li>
+                            <li><a href="#">GENERI E MOOD</a></li>
+                            <li><a href="#">NUOVE USCITE</a></li>
+                            <li><a href="#">SCOPRI</a></li>
+                        </ul>
+                    </nav>
+                    <div class="recently-played">
+                        <h1>Recently played</h1>
+                        <div class="albums">
+                            <div class="album">
+                                <img src="https://www.metal.it/image.ashx?id=7397&size=400&folder=album&suffix=cover&filters=square" alt="copertina">
+                                <h2>A Kind of Magic</h2>
+                                <p>Queen</p>
+                            </div>
+                            <div class="album">
+                                <img src="https://www.metal.it/image.ashx?id=7397&size=400&folder=album&suffix=cover&filters=square" alt="copertina">
+                                <h2>A Kind of Magic</h2>
+                                <p>Queen</p>
+                            </div>
+                            <div class="album">
+                                <img src="https://www.metal.it/image.ashx?id=7397&size=400&folder=album&suffix=cover&filters=square" alt="copertina">
+                                <h2>A Kind of Magic</h2>
+                                <p>Queen</p>
+                            </div>
+                            <div class="album">
+                                <img src="https://www.metal.it/image.ashx?id=7397&size=400&folder=album&suffix=cover&filters=square" alt="copertina">
+                                <h2>A Kind of Magic</h2>
+                                <p>Queen</p>
+                            </div>
+                            <div class="album">
+                                <img src="https://www.metal.it/image.ashx?id=7397&size=400&folder=album&suffix=cover&filters=square" alt="copertina">
+                                <h2>A Kind of Magic</h2>
+                                <p>Queen</p>
+                            </div>
+                            <div class="album">
+                                <img src="https://www.metal.it/image.ashx?id=7397&size=400&folder=album&suffix=cover&filters=square" alt="copertina">
+                                <h2>A Kind of Magic</h2>
+                                <p>Queen</p>
+                            </div>
+                            <div class="album">
+                                <img src="https://www.metal.it/image.ashx?id=7397&size=400&folder=album&suffix=cover&filters=square" alt="copertina">
+                                <h2>A Kind of Magic</h2>
+                                <p>Queen</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tailor-made">
+                        <h1>Creato per te</h1>
+                        <p>Più ascolti, più accurati saranno i suggerimenti.</p>
+                        <div class="albums">
+                            <div class="album">
+                                <img src="https://www.metal.it/image.ashx?id=7397&size=400&folder=album&suffix=cover&filters=square" alt="copertina">
+                                <h2>A Kind of Magic</h2>
+                                <p>Queen</p>
+                            </div>
+                            <div class="album">
+                                <img src="https://www.metal.it/image.ashx?id=7397&size=400&folder=album&suffix=cover&filters=square" alt="copertina">
+                                <h2>A Kind of Magic</h2>
+                                <p>Queen</p>
+                            </div>
+                            <div class="album">
+                                <img src="https://www.metal.it/image.ashx?id=7397&size=400&folder=album&suffix=cover&filters=square" alt="copertina">
+                                <h2>A Kind of Magic</h2>
+                                <p>Queen</p>
+                            </div>
+                        </div>
+                    </div>
                 </main>
             </section>
         </div>
-        <div class="container foot">
+        <!-- <div class="container foot">
             <footer>
                 <div class="player"></div>
             </footer>
-        </div>
+        </div> -->
     </body>
 </html>
