Footer in progress

--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@
                 </main>
             </section>
         </div>
-        <!-- <div class="container foot">
+        <div class="container foot">
             <footer>
                 <div class="player"></div>
             </footer>
-        </div> -->
+        </div>
     </body>
 </html>
