Media query smartphone done

--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     </head>
     <body>
         <div class="container">
+            <!-- BARRA ASIDE SX -->
             <aside>
                 <div class="menu-sx">
                     <div class="upper-aside">
                         <div class="logo">
-                            <img class="logo-img" src="https://storage.googleapis.com/pr-newsroom-wp/1/2018/11/Spotify_Logo_RGB_White.png" alt="Spotify">
+                            <i class="fab fa-spotify"></i>
+                            <h1>Spotify</h1>
                         </div>
                         <ul class="links">
                             <li class="link">
@@ -74,12 +76,14 @@
                 </div>
             </aside>
             <section class="core">
+                <!-- HEADER CON BOTTONE UPGRADE -->
                 <header>
                     <div class="reg-bar">
                         <a href="#">EFFETTUA L'UPGRADE</a>
                     </div>
                 </header>
                 <main>
+                <!-- NAV BAR CON MENU' LINK -->
                     <nav>
                         <ul>
                             <li><a href="#">IN EVIDENZA</a></li>
@@ -90,6 +94,7 @@
                             <li><a href="#">SCOPRI</a></li>
                         </ul>
                     </nav>
+                    <!-- SEZIONE ALBUM RECENTI -->
                     <div class="recently-played">
                         <h1>Recently played</h1>
                         <div class="albums">
@@ -130,6 +135,7 @@
                             </div>
                         </div>
                     </div>
+                    <!-- SEZIONE ALBUM SUGGERITI -->
                     <div class="tailor-made">
                         <h1>Creato per te</h1>
                         <h4>Più ascolti, più accurati saranno i suggerimenti.</h4>
@@ -154,8 +160,9 @@
                 </main>
             </section>
         </div>
-        <div class="container foot">
-            <footer>
+        <!-- SEZIONE FOOTER CON PLAYER MUSICALE - DISPLAY FIXED -->
+        <footer>
+            <div class="container foot">
                 <div class="player-bar">
                     <div class="player-bar-sx">
                         <div class="mini-portrait">
@@ -189,10 +196,9 @@
                         <i class="fas fa-desktop"></i>
                         <i class="fas fa-volume-up"></i>
                         <div class="linea"></div>
-
                     </div>
                 </div>
-            </footer>
-        </div>
+            </div>
+        </footer>
     </body>
 </html>
